--- a/homepage.html
+++ b/homepage.html
@@ -7,12 +7,21 @@
                 box-shadow: 2px 2px 2px 2px rgba(90, 86, 86, 0.2);
                 
             }
+            button{
+                background-color: coral;
+                box-shadow:2 px 2px 2px 2px cornflowerblue;
+            }
+            a{
+                text-decoration: none;
+            }
         </style>
     </head>
     <body>
         <h1>CRUD operation in action!!</h1>
         <h3>Connect to database and try to show data from person table by querying</h3>
-
+        <button>
+            <a href="/create">To create user page</a>
+        </button>
         {{range .Persons}}
             <div>
                 <p>{{.Id}}   {{.FirstName}}    {{.LastName}}  {{.Dob}}</p><br>
